@@ -72,13 +72,13 @@ MODULE_SCOPE long	tclMacOSXDarwinRelease;
 #define TclLoadDbgMsg(m, ...)
 #endif /* TCL_DEBUG_LOAD */
 
-#endif /* HAVE_COREFOUNDATION */
-
 /*
  * Forward declaration of functions defined in this file:
  */
 
 static short		OpenResourceMap(CFBundleRef bundleRef);
+
+#endif /* HAVE_COREFOUNDATION */
 
 /*
  *----------------------------------------------------------------------
@@ -92,6 +92,8 @@ static short		OpenResourceMap(CFBundleRef bundleRef);
  *
  *----------------------------------------------------------------------
  */
+
+#ifdef HAVE_COREFOUNDATION
 
 static short
 OpenResourceMap(
@@ -139,6 +141,8 @@ OpenResourceMap(
     }
     return -1;
 }
+
+#endif /* HAVE_COREFOUNDATION */
 
 /*
  *----------------------------------------------------------------------
@@ -282,7 +286,10 @@ Tcl_MacOSXOpenVersionedBundleResources(
 	}
 	if (versionedBundleRef) {
 #if MAC_OS_X_VERSION_MIN_REQUIRED < 1050
-	    /* Workaround CFBundle bug in Tiger and earlier. [Bug 2569449] */
+	    /*
+	     * Workaround CFBundle bug in Tiger and earlier. [Bug 2569449]
+	     */
+
 	    if (tclMacOSXDarwinRelease >= 9)
 #endif
 	    {
